--- a/index.html
+++ b/index.html
@@ -8,16 +8,36 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo">HEADER</a>
+        <a href="" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
         <nav>
             <span class="nav">TRUC</span>
             <span class="nav">MACHIN</span>
             <span class="nav">BIDULES</span>
         </nav>
     </header>
-    Hello world !
+    <section class="gray">
+        <div class="header-space"></div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat veritatis, magni tempore temporibus quasi non obcaecati. Earum adipisci excepturi sunt dolore mollitia ipsam aliquam, veritatis in atque ullam explicabo tenetur nobis numquam voluptas fugit inventore deserunt quaerat eius qui a id autem sequi ut minus! Quo, iusto voluptatum! Autem ab optio possimus deserunt quo sapiente, asperiores ipsum facere aliquam cum nihil animi fuga consectetur ducimus vero eos. Modi neque corrupti quisquam eveniet provident quod minus ex excepturi veniam officia earum iusto voluptatem, repellendus pariatur alias ipsum ducimus odio rem! Possimus delectus sit dicta? Asperiores dicta ut delectus deleniti exercitationem maiores eum perferendis sunt soluta modi. Excepturi blanditiis quae hic numquam expedita voluptate deleniti molestiae, modi unde neque dolor tenetur perspiciatis consectetur qui architecto beatae, sequi repudiandae. Saepe sint tenetur incidunt asperiores necessitatibus. Dolor excepturi et soluta amet, libero totam quidem deserunt reiciendis animi officiis optio praesentium porro maxime, cumque magni unde hic quae, ipsum adipisci officia! Reprehenderit tempore recusandae, eius quasi impedit, explicabo minus ipsa aliquid id laboriosam repellendus libero quo perferendis, voluptas et totam corrupti facere. Dolores nostrum enim nihil, modi necessitatibus iure itaque nemo mollitia quaerat fugit iste officiis dicta dignissimos laudantium, atque nobis doloribus repudiandae earum voluptatem vitae deleniti culpa quasi illo. Consequatur, voluptates soluta dolorum, eveniet ullam suscipit explicabo corrupti dolor voluptatibus sit laudantium dicta libero deserunt minus neque sunt similique enim dolore, fugiat rerum excepturi quam. Illum numquam cum voluptates. Iste eius numquam ab laborum voluptates quia laudantium. Facilis, iusto at. Sapiente, voluptates aut hic adipisci placeat laboriosam! Corrupti eveniet, voluptatem neque nam voluptate, libero, soluta placeat enim nihil culpa possimus modi. Sint eligendi dignissimos quibusdam molestiae quo aut magnam, commodi ullam quae, et est voluptas quod exercitationem pariatur omnis, itaque facilis corrupti possimus labore eum facere quidem! Voluptas accusantium odio repellat dolore aperiam?
+        </div>
+    </section>
+    <section class="white">
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolorum commodi non hic dignissimos accusamus magni temporibus laborum a, expedita cumque ut reprehenderit earum odio impedit sunt ab nobis! Aliquam quae deserunt sequi itaque dolores? Dolores ipsum voluptatibus, accusantium vero excepturi ullam velit repudiandae, architecto ducimus eos quae, quis vel rem saepe deleniti repellat eum incidunt ipsa magni illum. Hic totam, velit amet, iure necessitatibus nam minima autem animi tempora voluptatibus explicabo in! Necessitatibus architecto atque neque earum. Molestias eum repellat magnam autem quisquam, a temporibus eligendi quia quae, rem, ipsam labore saepe quo molestiae nisi. Dolores, natus totam! Iusto officiis non similique maxime quia nostrum delectus quisquam sapiente quaerat eveniet, perspiciatis quos doloremque, voluptatibus vel voluptatum error odit ut ipsum laboriosam amet quo velit! Sed praesentium possimus labore veritatis sapiente! Natus facilis tempora quae dolor possimus vero et, dolorum incidunt officiis modi quasi, alias debitis aperiam, porro est assumenda iure totam inventore consequuntur eligendi itaque. Ducimus, inventore suscipit deserunt, beatae fuga fugiat obcaecati rem odit quasi itaque asperiores. Ipsam inventore recusandae et voluptates modi, saepe omnis vel, repudiandae voluptatibus, commodi praesentium optio? Quam doloribus animi, eveniet sint non dolor voluptatum perspiciatis beatae harum, soluta impedit! Voluptate corrupti nobis voluptatibus!
+        </div>
+    </section>
     <footer>
-        Footer
+        <div class="container">
+            <div class="sponsor">
+                <div>Sponsor 1</div>
+                <div>Sponsor 2</div>
+                <div>Sponsor 3</div>
+            </div>
+            <div class="copyright">
+                <div>© 2024 Julien Coindet</div>
+                <div>Tous droits réservés</div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
