--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <span class="nav">TRUC</span>
             <span class="nav">MACHIN</span>
-            <span class="nav">BIDULES</span>
+            <span class="nav">BIDULE</span>
         </nav>
     </header>
     <section class="gray">
