--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 </head>
 <body>
     <header id="header">
-        <a href="" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
+        <a href="#" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
         <nav>
-            <span class="nav">TRUC</span>
-            <span class="nav">MACHIN</span>
-            <span class="nav">BIDULE</span>
+            <ul class="nav-links">
+                <li><a href="#">TRUC</a></li>
+                <li><a href="#">BIDULE</a></li>
+                <li>
+                    <a href="#" class="desktop-item">MACHIN</a>
+                    <ul class="drop-menu">
+                        <li><a href="#">SOMETHING ...</a></li>
+                        <li><a href="#">ELSE ...</a></li>
+                        <li><a href="#">OTHER THING BUT VERY LONG</a></li>
+                        <li><a href="#">FINAL LINK</a></li>
+                    </ul>
+                </li>
+            </ul>
         </nav>
     </header>
     <section class="gray">
