--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header id="header">
-        <a href="#" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
+        <a href="#a" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#">TRUC</a></li>
                 <li><a href="#">BIDULE</a></li>
                 <li>
-                    <a href="#" class="desktop-item">MACHIN</a>
+                    <a href="#link1" class="desktop-item">MACHIN</a>
                     <ul class="drop-menu">
-                        <li><a href="#">SOMETHING ...</a></li>
-                        <li><a href="#">ELSE ...</a></li>
-                        <li><a href="#">OTHER THING BUT VERY LONG</a></li>
-                        <li><a href="#">FINAL LINK</a></li>
+                        <li><a href="#link2">SOMETHING ...</a></li>
+                        <li><a href="#link3">ELSE ...</a></li>
+                        <li><a href="#link4">OTHER THING BUT VERY LONG</a></li>
+                        <li><a href="#link5">FINAL LINK</a></li>
                     </ul>
                 </li>
             </ul>
