--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
 </head>
 <body>
     <header id="header">
-        <a href="#a" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
         <nav>
+            <a href="#a" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
             <ul class="nav-links">
-                <li><a href="#">TRUC</a></li>
-                <li><a href="#">BIDULE</a></li>
-                <li>
-                    <a href="#link1" class="desktop-item">MACHIN</a>
+                <li><a href="#">CONFERENCES</a>
                     <ul class="drop-menu">
-                        <li><a href="#link2">SOMETHING ...</a></li>
-                        <li><a href="#link3">ELSE ...</a></li>
-                        <li><a href="#link4">OTHER THING BUT VERY LONG</a></li>
-                        <li><a href="#link5">FINAL LINK</a></li>
+                        <li><a href="#link2">MENTAL</a></li>
+                        <li><a href="#link3">PHYSIQUE</a></li>
+                        <li><a href="#link4">ENTOURAGE</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">RESEAU</a>
+                    <ul class="drop-menu">
+                        <li><a href="#link2">SECTEURS D'INTERVENTION</a></li>
+                        <li><a href="#link3">COORDINATION DES INTERVENTIONS</a></li>
+                        <li><a href="#link4">OPTIMISATION DES CONDITIONS D'INTERVENTION</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#link1" class="desktop-item">ASSOCIATIONS</a>
+                    <ul class="drop-menu last">
+                        <li><a href="#link2">MISSIONS</a></li>
+                        <li><a href="#link3">PROJETS SPORTIFS SOLIDAIRES ET DE COHESION</a></li>
+                        <li><a href="#link4">PROJETS INNOVANTS</a></li>
+                        <li><a href="#link5">CREATION COURSE SOLIDAIRE</a></li>
+                        <li><a href="#link6">MISE EN LUMIERE DU HANDICAP ET DE LA DEPENDANCE</a></li>
                     </ul>
                 </li>
             </ul>
