Add menu button on mobile

--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
 <body>
     <header id="header">
         <nav>
+            <label for="menu-btn" class="btn menu-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 72.96 510.7 437.8">
+                    <path d="M0 109.44C0 89.262 16.302 72.96 36.48 72.96l437.76 0c20.178 0 36.48 16.302 36.48 36.48s-16.302 36.48-36.48 36.48L36.48 145.92C16.302 145.92 0 129.618 0 109.44zM0 291.84c0-20.178 16.302-36.48 36.48-36.48l437.76 0c20.178 0 36.48 16.302 36.48 36.48s-16.302 36.48-36.48 36.48L36.48 328.32c-20.178 0-36.48-16.302-36.48-36.48zM510.72 474.24c0 20.178-16.302 36.48-36.48 36.48L36.48 510.72c-20.178 0-36.48-16.302-36.48-36.48s16.302-36.48 36.48-36.48l437.76 0c20.178 0 36.48 16.302 36.48 36.48z"/>
+                </svg>
+            </label>
             <a href="#a" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
+            <input type="radio" name="slider" id="menu-btn">
+            <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
-                <li><a href="#">CONFERENCES</a>
+                <label for="close-btn" class="btn close-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="51.08 153.48 512.2 512.2">
+                        <path d="M548.16 240.96 379.68 409.6 548.32 578.08c20 20 20 52.48 0 72.48s-52.48 20-72.48 0L307.2 482.08 138.72 650.72c-20 20-52.48 20-72.48 0s-20-52.48 0-72.48L234.72 409.6 66.08 241.12c-20-20-20-52.48 0-72.48s52.48-20 72.48 0L307.2 337.12 475.68 168.48c20-20 52.48-20 72.48 0s20 52.48 0 72.48Z"/>
+                    </svg>
+                </label>
+                <li>
+                    <a href="#">CONFERENCES</a>
                     <ul class="drop-menu">
                         <li><a href="#link2">MENTAL</a></li>
                         <li><a href="#link3">PHYSIQUE</a></li>
                         <li><a href="#link4">ENTOURAGE</a></li>
                     </ul>
                 </li>
-                <li><a href="#">RESEAU</a>
+                <li>
+                    <a href="#">RESEAU</a>
                     <ul class="drop-menu">
                         <li><a href="#link2">SECTEURS D'INTERVENTION</a></li>
                         <li><a href="#link3">COORDINATION DES INTERVENTIONS</a></li>
@@ -27,7 +41,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#link1" class="desktop-item">ASSOCIATIONS</a>
+                    <a href="#link1">ASSOCIATIONS</a>
                     <ul class="drop-menu last">
                         <li><a href="#link2">MISSIONS</a></li>
                         <li><a href="#link3">PROJETS SPORTIFS SOLIDAIRES ET DE COHESION</a></li>
