--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header id="header">
         <nav>
             <label for="menu-btn" class="btn menu-btn">
-                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3 6L37 6" stroke-width="6" stroke-linecap="round"/>
-                    <path d="M3 34L37 34" stroke-width="6" stroke-linecap="round"/>
-                    <path d="M3 20L37 20" stroke-width="6" stroke-linecap="round"/>
+                <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3 6L37 6" />
+                    <path d="M3 34L37 34" />
+                    <path d="M3 20L37 20" />
                 </svg>
             </label>
             <a href="#a" class="logo"><span class="complementary">ULTRA</span>ORDINAIRE</a>
@@ -24,9 +24,9 @@
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3 37L37 3" stroke-width="6" stroke-linecap="round"/>
-                        <path d="M37 37L3 3" stroke-width="6" stroke-linecap="round"/>
+                    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 37L37 3" />
+                        <path d="M37 37L3 3" />
                     </svg>
                 </label>
                 <li>
