--- a/404.html
+++ b/404.html
@@ -3,18 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <title>Ultraordinaire</title>
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
-        // MIT License
         // https://github.com/rafgraph/spa-github-pages
-        // This script takes the current url and converts the path and query
-        // string into just a query string, and then redirects the browser
-        // to the new url with only a query string and hash fragment,
-        // e.g. https://www.foo.tld/one/two?a=b&c=d#qwe, becomes
-        // https://www.foo.tld/?/one/two&a=b~and~c=d#qwe
-        // Note: this 404.html file must be at least 512 bytes for it to work
-        // with Internet Explorer (it is currently > 512 bytes)
         var pathSegmentsToKeep = 0;
 
         var l = window.location;
