--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Site web de Julien Coindet" data-rh="true">
+    <link rel="canonical" href="" />
     <title>Ultraordinaire</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
