--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Site web de Julien Coindet" data-rh="true">
+    <meta name="format-detection" content="telephone=no, address=no, email=no">
     <link rel="canonical" href="" />
     <title>Ultraordinaire</title>
     <!-- Start Single Page Apps for GitHub Pages -->
